# lookback

./: .gitignore  CMakeLists.txt  README.md  clean.py
include/lookback/: lookback.h  lookback_backtest.h  lookback_data_parser.h  lookback_data_stream.h  lookback_engine.h  lookback_strategy.h  lookback_thread_pool.h
include/lookback/internal/: lookback_backtest.h  lookback_data_parser.h  lookback_data_stream.h  lookback_engine.h  lookback_order_manager.h  lookback_strategy.h  lookback_thread_pool.h
